--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/css/style.css">
-	<link rel="stylesheet" media="all and (max-width: 1000px)" href="./assets/css/media-query-1000px.css">
-	<link rel="stylesheet" media="all and (max-width: 650px)" href="./assets/css/media-query-650px.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap-min.css">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" media="all and (max-width: 1180px)" href="./css/media-query-1180px-min.css">
+	<link rel="stylesheet" media="all and (max-width: 1000px)" href="./css/media-query-1000px-min.css">
+	<link rel="stylesheet" media="all and (max-width: 650px)" href="./css/media-query-650px-min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<!--<link	href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">-->
 	<link rel="preload"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript>
-		<link rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
-	</noscript>
+
 	<meta charset="UTF-8">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
-	<meta name="description"	content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
+	<meta name="description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle à Bordeaux" />
-	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière." />
+	<meta name="twitter:description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière." />
 	<meta name="twitter:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp" />
 	<!-- Open Graph meta (Facebook, Linkedin) -->
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux" />
 	<meta property="og:type" content="article" />
-	<meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière." />
+	<meta property="og:description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière." />
 	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp" />
 </head>
 
 <body>
 	<div class="top-header">
-		<h3 class="name">Nina Carducci</h3>
+		<h1 class="name">Nina Carducci</h1>
 		<div class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
@@ -47,7 +47,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="header">
+	<section id="header">
 
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
@@ -62,7 +62,8 @@
 				<div class="carousel-item active">
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-auto"
 						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2048.webp 2048w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1440.webp 1440w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
-						sizes="100vw" alt="Photo de Ryoji Iwata sur un passage clouté" width="1920" height="888">
+						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Photo de Ryoji Iwata sur un passage clouté"
+						width="1920" height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 h-auto"
@@ -89,31 +90,36 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-	</div>
-	<div id="about">
-		<div class="picture left">
-			<img src="./assets/images/nina.jpg" loading="lazy"
-				srcset="./assets/images/nina-560.webp 560w, ./assets/images/nina-320.webp 320w"
-				sizes="(min-width: 2020px) 560px, (min-width: 1180px) calc(30vw - 40px), (min-width: 660px) calc(46vw - 74px), calc(80vw - 51px)"
-				alt="Portrait de Nina Carducci" width="375" height="375">
-
+	</section>
+	<section id="#about">
+		<div id="about">
+			<div class="picture left">
+				<img src="./assets/images/nina.jpg" loading="lazy"
+					srcset="./assets/images/nina-560.webp 560w, ./assets/images/nina-320.webp 320w"
+					sizes="(min-width: 2020px) 560px, (min-width: 1180px) calc(30vw - 40px), (min-width: 660px) calc(46vw - 74px), calc(80vw - 51px)"
+					alt="Portrait de Nina Carducci" width="375" height="375">
+			</div>
+			<div id="about-me">
+				<h2 class="about-me__title">À propos de moi</h2>
+				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+					prédestinée.
+					Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me
+					fait vibrer.</h3>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le
+					figer
+					au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le
+					partager
+					au plus grand nombre.
+					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
+					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la
+					tendresse
+					et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+			</div>
 		</div>
-		<div id="about-me">
-			<h3 class="about-me__title">A propos de moi</h3>
-			<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné.
-				Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me
-				fait vibrer.</h3>
-			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer
-				au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager
-				au plus grand nombre.
-				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
-				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse
-				et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 		</div>
-	</div>
-	</div>
-	<div id="gallery">
-		<h3 class="title">Portfolio</h3>
+	</section>
+	<section id="gallery">
+		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
@@ -166,15 +172,16 @@
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est
+					<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est
 						traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en
-						photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+						photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h3>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
-	</div>
-	<div id="services">
+
+	</section>
+	<section id="services">
 		<h2 class="title">Mes services</h2>
 		<div class="container">
 			<div class="service">
@@ -192,7 +199,8 @@
 			<div class="service">
 				<div class="service__description">
 					<h3>Retouches</h3>
-					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos
+					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour
+						vos
 						publications</p>
 				</div>
 				<div class="service__price">
@@ -203,7 +211,8 @@
 			<div class="service">
 				<div class="service__description">
 					<h3>Album photos</h3>
-					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo
+					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album
+						photo
 						personnalisé</p>
 				</div>
 				<div class="service__price">
@@ -212,21 +221,22 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou
-					une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+				<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou
+					une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
-	<div id="contact">
+	<footer id="contact">
+		<h2 class="title">Contact</h2>
+		<h3>Une question ? Une demande de devis ?</h3>
+		<p> N’hésitez pas à m’écrire ! Je vous répondrai en moins de 24 heures</p>
 		<div class="container">
-			<div class="form-container">
-				<h3>Une question ? Une demande de devis ?</h3>
-				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+			<div class="form-container">			
 				<form action="" method="post">
 					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom">
@@ -238,26 +248,40 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.jpg" loading="lazy"
-					srcset="./assets/images/camera-1024.webp 1024w,./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
-					sizes="(min-width: 1700px) 419px, (min-width: 1420px) calc(12.69vw + 206px), (min-width: 1180px) 299px, (min-width: 980px) calc(55.56vw - 196px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
-					alt="Appareil photo sur fond sombre" width="420" height="420" />
+			<img src="./assets/images/camera-320.webp" loading="lazy"
+						srcset="./assets/images/camera-1024.webp 1024w,./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
+						sizes="(min-width: 100px) 80vw, 50vw"
+						alt="Appareil photo sur fond sombre" width="300" height="300" />
 			</div>
 		</div>
-		<div itemscope itemtype=”https://schema.org/LocalBusiness”>
-			<span itemprop=”name”>Photographe</span>
+		<div class="container divInfos">
+			<div class="colInfos">
+				<h4>Adresse</h4>
+				<div itemprop=”address” itemscope itemtype=”https://schema.org/PostalAddress”>
+					<span itemprop=”streetAddress”>68 avenue Alsace-Lorraine</span>
+					<br>
+					<span itemprop=”postalCode”>33000</span>
+					<span itemprop=”addressLocality”>Bordeaux</span>					
+				</div>
+			</div>
+			<div class="colInfos">
+				<h4>Coordonnées</h4>
+				<span>Téléphone</span>
+				<p itemprop="telephone">05 56 67 78 89</p>
+			</div>
+			<div class="colInfos">
+				<h4>Horaires</h4>
+				<span itemprop="openingHours">Du lundi au vendredi</span>
+				<br>
+				<span>de 10h à 19h</span>
+			</div>
+		</div>
 
-			<div itemprop=”address” itemscope itemtype=”https://schema.org/PostalAddress”>
-				<span itemprop=”streetAddress”>68 avenue Alsace-Lorraine</span>
-				<span itemprop=”addressLocality”>Bordeaux</span>,
-				<span itemprop=”postalCode”>33000</span>
-			</div>
-		</div>
-		<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-		<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
+		<script src="./assets/bootstrap/bootstrap.bundle-min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-		<script defer src="./assets/maugallery.js"></script>
-		<script defer src="./assets/scripts.js"></script>
+		<script src="./assets/maugallery-min.js"></script>
+		<script src="./assets/scripts.js"></script>
 		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org",
@@ -274,9 +298,10 @@
 		"telephone": "0556677889",
 		"url": "https://nina-carducci.github.io",
 		"openingHours": "Lundi,Mardi,Mercredi,Jeudi,Vendredi 10:00-19:00",
-		"priceRange" : "20€ - 500€"
+		"priceRange" : "50€ - 400€"
 	}
 	</script>
+	</footer>
 </body>
 
 </html>
