--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
+	<!-- Styles CSS -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/css/style.css">
-	<!--<link rel="stylesheet" media="all and (max-width: 1180px)" href="./assets/css/media-query-1180px.css">
+	<link rel="stylesheet" media="all and (max-width: 1180px)" href="./assets/css/media-query-1180px.css">
 	<link rel="stylesheet" media="all and (max-width: 1000px)" href="./assets/css/media-query-1000px.css">
 	<link rel="stylesheet" media="all and (max-width: 650px)" href="./assets/css/media-query-650px.css">
-	-->
+	<!-- Polices et icônes -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="icon" type="image/png"  href="https://p2r3d.github.io/favicon.png">
-	<meta charset="UTF-8">
+	<link rel="icon" type="image/png" href="./favicon.PNG">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
@@ -63,20 +63,18 @@
 				<div class="carousel-item active">
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100 h-auto"
 						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2048.webp 2048w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1440.webp 1440w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
-						sizes="(min-width: 2040px) 920px, calc(94.19vw + 17px)" alt="Photo de Ryoji Iwata sur un passage clouté"
+						sizes="(min-width: 2040px) 1920px, calc(92.19vw + 58px)" alt="Photo de Ryoji Iwata sur un passage clouté"
 						width="1920" height="888">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto"
-						loading="lazy"
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto" loading="lazy"
 						srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-2048.webp 2048w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1700.webp 1700w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1440.webp 1440w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w"
-						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"  alt="Concert de Nicholas Green" width="1920"
-						height="888">
+						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920" height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100 h-auto"
 						loading="lazy"
-						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-2048.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1440.webp 1440w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
+						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-2048.webp 2048w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1440.webp 1440w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
 						sizes="100vw" alt="Mariage d'Edward Cisneros" width="1920" height="888">
 				</div>
 			</div>
@@ -97,7 +95,7 @@
 			<div class="picture left">
 				<img src="./assets/images/nina.jpg" loading="lazy"
 					srcset="./assets/images/nina-560.webp 560w, ./assets/images/nina-320.webp 320w"
-					sizes="(min-width: 2020px) 560px, (min-width: 1180px) calc(30vw - 40px), (min-width: 660px) calc(46vw - 74px), calc(80vw - 51px)"
+					sizes="(min-width: 2000px) 493px, (min-width: 1000px) calc(31.22vw - 125px), (min-width: 660px) calc(50vw - 200px), calc(80vw - 102px)"
 					alt="Portrait de Nina Carducci" width="375" height="375">
 			</div>
 			<div id="about-me">
@@ -126,47 +124,47 @@
 				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-650.webp 650w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Concert de Paul Aaron" width="440" height="440" />
 				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-650.webp 650w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Chef d'entreprise Ali Morshedlou" width="440" height="440" />
 				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-650.webp 650w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Chef d'entreprise Jason Goodman" width="440" height="440" />
 				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-650.webp 650w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Mariage de Hannah" width="440" height="440" />
 				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-650.webp 650w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Portrait de Ade Tunji" width="440" height="440" />
 				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-650.webp 650w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Mariage de Jakob Owens" width="440" height="440" />
 				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-650.webp 650w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Portrait de Nino Van Prattenburg" width="440" height="440" />
 				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-650.webp 650w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Concert d'Austin Neill" width="440" height="440" />
 				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-650.webp 650w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					alt="Chef d'entreprise Mateus Campos" width="440" height="440" />
 			</div>
 		</div>
@@ -252,48 +250,48 @@
 			<div class="picture right">
 				<img src="./assets/images/camera.jpg" loading="lazy"
 					srcset="./assets/images/camera-1024.webp 1024w,./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
-					sizes="(min-width: 1700px) 320px, (min-width: 650px) calc(42.86vw - 63px), (min-width: 640px) calc(-200vw + 1538px), calc(47.5vw - 37px)"
+					sizes="(min-width: 1700px) 419px, (min-width: 1420px) calc(12.69vw + 206px), (min-width: 1020px) calc(28.16vw - 35px), (min-width: 980px) calc(-510vw + 5346px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
 					alt="Appareil photo sur fond sombre" width="300" height="300" />
 			</div>
-		</section>
-		<footer id="footer">
-			<div class="divInfos">
-				<div class="colInfos">
-					<h4>Adresse</h4>
-					<div itemprop=”address” itemscope itemtype=”https://schema.org/PostalAddress”>
-						<span itemprop=”streetAddress”>68 avenue Alsace-Lorraine</span>
-						<br>
-						<span itemprop=”postalCode”>33000</span>
-						<span itemprop=”addressLocality”>Bordeaux</span>
-					</div>
-				</div>
-				<div class="colInfos">
-					<h4>Coordonnées</h4>
-					<span>Téléphone</span>
-					<p itemprop="telephone">05 56 67 78 89</p>
-				</div>
-				<div class="colInfos">
-					<h4>Horaires</h4>
-					<span itemprop="openingHours">Du lundi au vendredi</span>
+	</section>
+	<footer id="footer">
+		<div class="divInfos">
+			<div class="colInfos">
+				<h4>Adresse</h4>
+				<div itemprop=”address” itemscope itemtype=”https://schema.org/PostalAddress”>
+					<span itemprop=”streetAddress”>68 avenue Alsace-Lorraine</span>
 					<br>
-					<span>de 10h à 19h</span>
-				</div>
-				<div class="colInfos">
-					<h4>Tarifs</h4>
-					<span itemprop="priceCurrency" content="EUR"></span>
-					<span itemprop="price" content="50">Retouche photo : 50€</span><br>
-					<span itemprop="price" content="350">Shooting : 350€</span><br>
-					<span itemprop="price" content="400">Album : 400€</span>
+					<span itemprop=”postalCode”>33000</span>
+					<span itemprop=”addressLocality”>Bordeaux</span>
 				</div>
 			</div>
+			<div class="colInfos">
+				<h4>Coordonnées</h4>
+				<span>Téléphone</span>
+				<p itemprop="telephone">05 56 67 78 89</p>
+			</div>
+			<div class="colInfos">
+				<h4>Horaires</h4>
+				<span itemprop="openingHours">Du lundi au vendredi</span>
+				<br>
+				<span>de 10h à 19h</span>
+			</div>
+			<div class="colInfos">
+				<h4>Tarifs</h4>
+				<span itemprop="priceCurrency" content="EUR"></span>
+				<span itemprop="price" content="50">Retouche photo : 50€</span><br>
+				<span itemprop="price" content="350">Shooting : 350€</span><br>
+				<span itemprop="price" content="400">Album : 400€</span>
+			</div>
 		</div>
-</footer> 
-		<script src="./assets/bootstrap/bootstrap.bundle-min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-		<script src="./assets/maugallery-min.js"></script>
-		<script src="./assets/scripts.js"></script>
-		<script type="application/ld+json">
+		</div>
+	</footer>
+	<script src="./assets/bootstrap/bootstrap.bundle-min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/maugallery-min.js"></script>
+	<script src="./assets/scripts.js"></script>
+	<script type="application/ld+json">
 	{
 		"@context": "https://schema.org",
 		"@type": ["localBusiness", "ProfessionalService", "Person"],
@@ -312,7 +310,7 @@
 		"priceRange" : "50€ - 400€"
 	}
 	</script>
-	
+
 </body>
 
 </html>
